--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,40 @@
 }
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 20px;
+}
+
+header {
+  background-color: rgb(56, 138, 168) !important;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  color: white;
+}
+
+.genel-kapsayici {
+  background-color: rgb(255, 255, 255);
+  border-radius: 30px;
+  padding-top: 10px;
+}
+.resim-kismi {
+  text-align: center;
+}
+
+img {
+  border-radius: 20px !important;
+  width: 80%;
+  box-shadow: 10px 10px 30px rgb(38, 110, 128);
+}
+
+.isim {
+  color: black;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.job {
+  writing-mode: vertical-rl;
+  font-size: 0.8rem;
+  margin-top: 10px;
+  margin-left: -10px;
 }
